[package]
name = "gameboyo"
version = "0.1.0"
authors = ["Tim Rogers <rogers.timothy.john@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", features = [ "async-std", "canvas" ], tag = "0.3.0" }
iced_native = { git = "https://github.com/hecrj/iced.git", tag = "0.3.0" }
iced_web = { git = "https://github.com/hecrj/iced.git", tag = "0.3.0" }
rodio = { version = "0.14.0" }
nfd2 = { version = "0.3.0" }